:bug: 文章页信息代码迁移升级，降低加载延迟。私密文章支持多组用户名和密码 :art:

--- a/docs/80.关于/06.关于 - 本站/16.本站 - 站点信息模块.md
+++ b/docs/80.关于/06.关于 - 本站/16.本站 - 站点信息模块.md
@@ -233,13 +233,6 @@ bszCaller = {
   },
 };
 
-export default fetch = () => {
-  bszTag && bszTag.hides();
-  bszCaller.fetch("//busuanzi.ibruce.info/busuanzi?jsonpCallback=BusuanziCallback", function (t) {
-    bszTag.texts(t), bszTag.shows();
-  })
-};
-
 bszTag = {
   bszs: ["site_pv", "page_pv", "site_uv"],
   texts: function (n) {
@@ -260,6 +253,13 @@ bszTag = {
       e && (e.style.display = "inline");
     });
   },
+};
+
+export default () => {
+  bszTag && bszTag.hides();
+  bszCaller.fetch("//busuanzi.ibruce.info/busuanzi?jsonpCallback=BusuanziCallback", function (t) {
+    bszTag.texts(t), bszTag.shows();
+  })
 };
 ```
 
@@ -888,7 +888,7 @@ export default {
         }
       }, iterationTime);
     },
-    created() {
+    beforeMount() {
       let webInfo = document.querySelector(".web-info");
       webInfo && webInfo.parentNode.removeChild(webInfo);
     },
@@ -1156,7 +1156,7 @@ export default {
     },
   },
   // 防止重写编译时，导致页面信息重复出现问题
-  created() {
+  beforeMount() {
     clearInterval(this.interval);
     this.removeElement(".page-view");
     this.removeElement(".book-words");
@@ -1753,10 +1753,7 @@ export default {
         }
       }, iterationTime);
     },
-    created() {
-      let webInfo = document.querySelector(".web-info");
-      webInfo && webInfo.parentNode.removeChild(webInfo);
-    },
+   
   },
 };
 </script>
