私密文章模块添加网站验证功能，解决异步弹窗提示重叠问题

--- a/docs/80.关于/06.关于 - 本站/16.本站 - 站点信息模块.md
+++ b/docs/80.关于/06.关于 - 本站/16.本站 - 站点信息模块.md
@@ -135,7 +135,7 @@ export default {
 
 本地主题不好的一点就是版本升级后曾修改的内容被重置，所以需要记好修改位置、备份，比较麻烦。好处是根据自己的需求在基础上拓展。
 
-**在线主题具有通用性，即在任意环境（如本地主题）也起效果。**
+**在线主题具有通用性，即在任意环境（如本地主题）都有效果。**
 
 ## 在线主题
 
@@ -2467,8 +2467,8 @@ blogInfo: {
 
 如果你还有疑惑，可以去我的 GitHub 仓库或者 Gitee 仓库查看源码。
 
-GitHub：<https://github.com/Kele-Bingtang/Kele-Bingtang.github.io>
+- [GitHub](https://github.com/Kele-Bingtang/Kele-Bingtang.github.io)
 
-Gitee：<https://gitee.com/kele-bingtang/Kele-Bingtang>
+- [Gitee](https://gitee.com/kele-bingtang/Kele-Bingtang)
 
 如果你有更好的方式，评论区留言告诉我，或者加入 Vdoing 主题的 QQ 群：694387113。谢谢！
