--- a/docs/80.关于/06.关于 - 本站/20.本站 - 记录阅读文章模块.md
+++ b/docs/80.关于/06.关于 - 本站/20.本站 - 记录阅读文章模块.md
@@ -275,12 +275,12 @@ plugins: <UserPlugins>[
 
 首先随便进入一个文章页里，然后关闭浏览器，然后重新打开浏览器访问主页，就会看到右下角出现提示，是否跳转过去。如果重新访问的是原来的文章页，则会自动移到之前的阅读位置。
 
-参考：<https://github.com/tolking/vuepress-plugin-last-reading>
+参考：`https://github.com/tolking/vuepress-plugin-last-reading`
 
 如果你还有疑惑，可以去我的 GitHub 仓库或者 Gitee 仓库查看源码。
 
-GitHub：<https://github.com/Kele-Bingtang/Kele-Bingtang.github.io>
+- [GitHub](https://github.com/Kele-Bingtang/Kele-Bingtang.github.io)
 
-Gitee：<https://gitee.com/kele-bingtang/Kele-Bingtang>
+- [Gitee](https://gitee.com/kele-bingtang/Kele-Bingtang)
 
 如果你有更好的方式，评论区留言告诉我，或者加入 Vdoing 主题的 QQ 群：694387113。谢谢！
