--- a/docs/80.关于/06.关于 - 本站/24.本站 - 导航站模块.md
+++ b/docs/80.关于/06.关于 - 本站/24.本站 - 导航站模块.md
@@ -330,8 +330,8 @@ Vue 组件可以传 4 个属性：
 
 如果你还有疑惑，可以去我的 GitHub 仓库或者 Gitee 仓库查看源码。
 
-GitHub：<https://github.com/Kele-Bingtang/Kele-Bingtang.github.io>
+- [GitHub](https://github.com/Kele-Bingtang/Kele-Bingtang.github.io)
 
-Gitee：<https://gitee.com/kele-bingtang/Kele-Bingtang>
+- [Gitee](https://gitee.com/kele-bingtang/Kele-Bingtang)
 
 如果你有更好的方式，评论区留言告诉我，或者加入 Vdoing 主题的 QQ 群：694387113。谢谢！
