--- a/docs/99.Vdoing私密文章登录.md
+++ b/docs/99.Vdoing私密文章登录.md
@@ -8,7 +8,7 @@ comment: false
 editLink: false
 ---
 
-您当前访问的是博主的私密文章，请输入有效的用户名和密码，如果没有，请向博主获取。
+您当前访问的是博主的私密文章，请输入有效的用户名和密码，如果没有，请在评论区或者其他途径向博主获取。
 
 <ClientOnly>
   <Login/>
@@ -18,7 +18,7 @@ editLink: false
 
 - 全局私密文章测试：用户名为 `vdoing`，密码为 `123456`
 - 单个私密文章测试：
-  - 用户名为 `vdoing`，密码为 `123`
+  - 用户名为 `vdoing`，密码为 `123456`
   - 用户名为 `1`，密码为 `1`
   - 用户名为 `2`，密码为 `2`
 
