--- a/docs/80.关于/06.关于 - 本站/26.本站 - 首页大图模块.md
+++ b/docs/80.关于/06.关于 - 本站/26.本站 - 首页大图模块.md
@@ -499,7 +499,7 @@ export default {
  * 在 head 里添加图标 link 地址：https://at.alicdn.com/t/font_3114978_qe0b39no76.css
  */
 function addTip(content, type, startHeight = 50, dieTime = 3000) {
-  var tip = document.querySelectorAll(".index-tip");
+  var tip = document.querySelectorAll(".global-tip");
   var time = new Date().getTime();
   // 获取最后消息提示元素的高度
   var top = tip.length == 0 ? 0 : tip[tip.length - 1].getAttribute("data-top");
@@ -509,7 +509,7 @@ function addTip(content, type, startHeight = 50, dieTime = 3000) {
     (tip.length != 0 ? tip[tip.length - 1].offsetHeight + 17 : startHeight);
 
   let div = document.createElement("div");
-  div.className = `index-tip tip-${type} ${time}`;
+  div.className = `global-tip tip-${type} ${time}`;
   div.style.top = parseInt(top) + "px";
   div.setAttribute("data-top", lastTop);
   if (type == "info" || type == 1) {
@@ -703,7 +703,7 @@ function nextAllTipElement(elem) {
 }
 
 /* 提示框元素 */
-.index-tip {
+.global-tip {
   position: fixed;
   display: flex;
   top: -10px;
@@ -720,7 +720,7 @@ function nextAllTipElement(elem) {
   line-height: 17px;
 }
 
-.index-tip p {
+.global-tip p {
   line-height: 17px;
   margin: 0;
   font-size: 14px;
@@ -1650,9 +1650,9 @@ indexImg: {
 
 如果你还有疑惑，可以去我的 GitHub 仓库或者 Gitee 仓库查看源码。
 
-GitHub：<https://github.com/Kele-Bingtang/Kele-Bingtang.github.io>
+- [GitHub](https://github.com/Kele-Bingtang/Kele-Bingtang.github.io)
 
-Gitee：<https://gitee.com/kele-bingtang/Kele-Bingtang>
+- [Gitee](https://gitee.com/kele-bingtang/Kele-Bingtang)
 
 如果你有更好的方式，评论区留言告诉我，或者加入 Vdoing 主题的 QQ 群：694387113。谢谢！
 
