--- a/docs/80.关于/06.关于 - 本站/30.本站 - 全局时间提示模块.md
+++ b/docs/80.关于/06.关于 - 本站/30.本站 - 全局时间提示模块.md
@@ -57,9 +57,9 @@ tags:
 
 ```vue
 <template></template>
-
 <script>
-const indexTip = false;  // 首页是否开启时间消息提示，默认 false。因为首页大图模块已经内置时间消息提示，所以我不需要开启。
+// 首页是否开启时间消息提示，默认 false。因为首页大图模块已经内置时间消息提示，所以这里不需要开启，如果您不使用首页大图模块，可以将此值设置为 true。
+const indexTip = false;
 export default {
   mounted() {
     // 首页不弹出消息提示，因为首页大图模块已经内置首页的消息提示
@@ -328,8 +328,8 @@ plugins: <UserPlugins>[
 
 如果你还有疑惑，可以去我的 GitHub 仓库或者 Gitee 仓库查看源码。
 
-GitHub：<https://github.com/Kele-Bingtang/Kele-Bingtang.github.io>
+- [GitHub](https://github.com/Kele-Bingtang/Kele-Bingtang.github.io)
 
-Gitee：<https://gitee.com/kele-bingtang/Kele-Bingtang>
+- [Gitee](https://gitee.com/kele-bingtang/Kele-Bingtang)
 
 如果你有更好的方式，评论区留言告诉我，或者加入 Vdoing 主题的 QQ 群：694387113。谢谢！
